Actualizacion de Ejemplos
Actualizacion de Ejemplos

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,5 @@
 hs_err_pid*
 /EstructurasCiclos/JavaIF/nbproject/private/
 /EstructurasCiclos/JavaIF/build/
+/EstructurasCiclos/JavaIFAnidado/nbproject/private/
+/EstructurasCiclos/JavaIFAnidado/build/
