Actualizacion de Ejercicios
Actualizacion de Ejercicios

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,7 @@ hs_err_pid*
 /EstructurasCiclos/JavaIF/build/
 /EstructurasCiclos/JavaIFAnidado/nbproject/private/
 /EstructurasCiclos/JavaIFAnidado/build/
+/EstructurasCiclos/JavaCFor/nbproject/private/
+/EstructurasCiclos/JavaCFor/build/
+/EstructurasCiclos/JavaCWhile/nbproject/private/
+/EstructurasCiclos/JavaCWhile/build/
