--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,5 @@ hs_err_pid*
 /EstructurasCiclos/JavaCFor/build/
 /EstructurasCiclos/JavaCWhile/nbproject/private/
 /EstructurasCiclos/JavaCWhile/build/
+/EstructurasCiclos/JavaIF/dist/
+/01100199/DemoArray/nbproject/private/
