--- a/01100199/DemoArray/nbproject/project.properties
+++ b/01100199/DemoArray/nbproject/project.properties
@@ -1,10 +1,9 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=JavaIF
-application.vendor=IngEspino
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -29,14 +28,13 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/JavaIF.jar
+dist.jar=${dist.dir}/DemoArray.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/JavaIF
-endorsed.classpath=
+dist.jlink.output=${dist.jlink.dir}/DemoArray
 excludes=
 includes=**
-jar.compress=true
+jar.compress=false
 javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
@@ -72,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=JavaIF
-main.class=javaif.JavaIF
+jlink.launcher.name=DemoArray
+main.class=demoarray.DemoArray
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
