--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,6 @@ hs_err_pid*
 /EstructurasCiclos/JavaCWhile/build/
 /EstructurasCiclos/JavaIF/dist/
 /01100199/DemoArray/nbproject/private/
+/01100199/DemoMatriz/nbproject/private/
+/01100199/DemoMatriz/build/
+/01100199/DemoMatriz/dist/
