--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,5 @@ hs_err_pid*
 /01100199/DemoMatriz/nbproject/private/
 /01100199/DemoMatriz/build/
 /01100199/DemoMatriz/dist/
+/01100199/Fechas/nbproject/private/
+/01100199/Fechas/build/
