--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,7 @@ hs_err_pid*
 /01100199/DemoMatriz/dist/
 /01100199/Fechas/nbproject/private/
 /01100199/Fechas/build/
+/Ventna1/nbproject/private/
+/Ventna1/build/
+/Ventana/nbproject/private/
+/Ventana/build/
