Ejemplo de Base de datos
Ejemplo de Base de Datos

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,11 @@ hs_err_pid*
 /Ventna1/build/
 /Ventana/nbproject/private/
 /Ventana/build/
+/JFXAppPaises/nbproject/private/
+/JFXAppPaises-Preloader/nbproject/private/
+/JFXAppPaises-Preloader/build/
+/JFXAppPaises-Preloader/dist/
+/JFXAppPaises/build/
+/cap03.demo/nbproject/private/
+/cap03.demo/build/
+/cap03.demo/dist/
